# uchenml-tboard

./: .bazelrc  .gitignore  LICENSE  MODULE.bazel  README.md  run.sh
.github/workflows/: test.yml
proto/: BUILD  event.proto  resource_handle.proto  summary.proto  tensor.proto
src/example_util/: BUILD  example_util.cc
src/uchen/tboard/: BUILD  tboard_file.cc  tboard_file.h
test/uchen/tboard/: BUILD  tboard_file.test.cc
