"""
TensorBoard support for UchenML framework
"""
module(name = "uchen-tboard", version = "0.1", compatibility_level = 1)

bazel_dep(name = "abseil-cpp", version = "20240722.0.bcr.2")

bazel_dep(name = "googletest", version = "1.15.2")
git_override(
    module_name = "googletest",
    remote = "https://github.com/google/googletest.git",
    commit = "e54519b09463cec3aea77a1739e02c97ca766da5",
)

# Dev dependencies
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/eugeneo/bazel-compile-commands-extractor.git",
    commit = "1e08f8e0507b6b6b1f4416a9a22cf5c28beaba93",
)
